--- a/src/app.css
+++ b/src/app.css
@@ -55,7 +55,8 @@
 		@apply cursor-not-allowed opacity-70;
 	}
 
-	button {
+	button,
+	.button-default {
 		@apply rounded border border-gray-600 px-2 py-0 dark:border-gray-300 cannot-hover:py-2;
 	}
 
