--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 	}
 
 	body {
-		@apply bg-white text-black dark:bg-gray-800 dark:text-white;
+		@apply bg-white text-black dark:bg-gray-800 dark:text-white font-good;
 	}
 
 	input,
@@ -62,5 +62,18 @@
 
 	.border-default {
 		@apply border border-gray-300 dark:border-gray-600;
+	}
+
+	.markdown td,
+	.markdown th {
+		@apply border-default px-2;
+	}
+
+	.markdown tbody tr {
+		@apply odd-rows;
+	}
+
+	.markdown hr {
+		@apply my-1;
 	}
 }
