feat: upload army file

--- a/src/app.css
+++ b/src/app.css
@@ -17,14 +17,16 @@
 	}
 
 	body,
-	input,
+	input[type='text'],
+	input[type='number'],
 	select,
 	textarea,
 	.opaque {
 		@apply bg-white dark:bg-gray-800;
 	}
 
-	input,
+	input[type='text'],
+	input[type='number'],
 	select,
 	textarea {
 		@apply rounded border border-gray-300 px-0.5 dark:border-gray-500;
